--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=RosterDB;Username=postgres;Password=toor"
   },
